added settings icon and java generic issues